--- a/movie-gallery.css
+++ b/movie-gallery.css
@@ -68,3 +68,50 @@
     font-size: 16px;
     color: rgb(75, 74, 74);
 }
+
+@media  screen and (min-width: 100px) and (max-width:480px){
+
+    .gallery-item{
+        width: 45%;
+        height: 11%;
+    }
+
+    .movies-gallery img{
+        width: 90%;
+        height: 130px;
+    }
+
+    .gallery-image{
+        display: flex;
+        justify-content: center;
+    }
+
+    .gallery-reating i{
+        font-size: 10px;
+    }
+
+    .gallery-reating p{
+        font-size: 10px;
+    }
+
+    .gallery-name{
+        margin-top: 2px;
+    }
+
+    .gallery-name h2{
+        font-size: 11px;
+    }
+
+    .gallery-reating{
+        width: 30%;
+        padding: 0;
+    }
+
+}
+
+@media screen and (min-width: 461px) and (max-width:768px) {
+    .gallery-item{
+        width: 45%;
+        height: 9%;
+    }
+}
