--- a/movies.css
+++ b/movies.css
@@ -10,7 +10,17 @@
     width: 90%;
 }
 
+.movie-slider {
+    width: 100%;
+}
+
 .movies-image{
+    width: 100%;
+    border-radius: 30px;
+}
+
+.movies-image img {
+    width: 100%;
     border-radius: 30px;
 }
 
@@ -18,18 +28,7 @@
     position: absolute;
     top: 38%;
     width: 30%;
-    display: flex;
-    justify-content: center;
-    padding: 20px 0;
-}
-
-.movies-info-cont{
-    width: 85%;
-}
-
-.movies img{
-    width: 100%;
-    border-radius: 30px;
+    padding: 30px 60px;
 }
 
 .movies-text h2{
@@ -52,7 +51,8 @@
 }
 
 .movies-btns{
-    width: 50%;
+    width: 55%;
+    padding: 20px 0;
     display: flex;
     justify-content: space-between;
 
@@ -62,23 +62,26 @@
     width: 150px;
     height: 50px;
     border: none;
+    outline: none;
     border-radius: 10px;
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
+    font-weight: 500;
     background-color: rgb(150, 7, 7);
     cursor: pointer;
 }
 
 .movie-add-btn{
     background-color: rgb(112, 106, 106);
-    width: 60px;
+    width: 50px;
     height: 50px;
     border: none;
+    outline: none;
     border-radius: 10px;
     color: white;
     font-family: 'Open Sans', sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     opacity: 0.6;
     cursor: pointer;
 
@@ -195,5 +198,120 @@
     color: white;
     text-shadow: 2px 2px 3px rgba(148,148,148,0.4);
 
+}
+
+@media  screen and (min-width: 100px) and (max-width:480px){
+    .movies{
+        padding: 20px 0;
+    }
+
+    .movies-info{
+        top: 12%;
+        width: 85%;
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 10px;
+    }
+
+    .movies-info-cont{
+        width: 100%;
+    }
+    
+    .movies-text h2{
+        font-size: 15px;
+        line-height: 20px;
+    }
+
+    .movies-text p{
+        font-size: 12px;
+    }
+
+    .movies-btns{
+        padding: 0;
+        width: 40%;
+    }
+
+    .movie-watch-btn{
+        width: 65%;
+        height: 20px;
+        font-size: 11px;
+    }
+
+    .movie-add-btn{
+        width: 25%;
+        height: 20px;
+        font-size: 11px;
+    }
+
+    .pr-nx-cont{
+        width: 25%;
+    }
+
+    .prev-movie-btn,
+    .next-movie-btn{
+        width: 30px;
+        height: 30px;
+    }
+
+    .prev-next-btn i{
+        font-size: 10px;
+    }
+}
+
+@media screen and (min-width: 461px) and (max-width:768px) {
+    
+    .movies-info-cont{
+        width: 100%;
+    }
+
+    .movies-info{
+        top: 55%;
+        width: 85%;
+        display: flex;
+        justify-content: space-between;
+        padding: 30px 40px;
+    }
+
+    .movies-text h2{
+        font-size: 25px;
+        line-height: 30px;
+    }
+
+    .movies-text p{
+        font-size: 20px;
+        padding: 10px 0;
+    }
+
+    .movies-btns{
+        padding: 0;
+        width: 30%;
+        background-color: aquamarine;
+    }
+
+    .movie-watch-btn{
+        width: 60%;
+        height: 45px;
+        font-size: 11px;
+    }
+
+    .movie-add-btn{
+        width: 25%;
+        height: 45px;
+        font-size: 11px;
+    }
+
+    .pr-nx-cont{
+        width: 17%;
+    }
+
+    .prev-movie-btn,
+    .next-movie-btn{
+        width: 50px;
+        height: 50px;
+    }
+
+    .prev-next-btn i{
+        font-size: 15px;
+    }
 }
 
